refactor(mods/*)!: use protobuf as contract